assets/css/main.css
/* ... */
	
	/* Tablet */

	@media screen and (min-width: 737px) and (max-width: 1200px) {

		/* Basic */

			body {
				min-width: 960px;
				font-size: 11pt;
			}

			input, textarea, select {
				font-size: 11pt;
			}

			header {
				margin: 0 0 1em 0;
			}

		/* Wrappers */

			.wrapper {
				padding: 5em 0 5em 0;
				text-align: center;
			}

				.wrapper.first {
					padding-top: 5em;
				}


		/* Articles */

			#top .image {
				width: 19.5em;
				height: 19.5em;
				margin: 0;
			}

	}

/* Mobile */

	@media screen and (max-width: 736px) {

		/* Navigation */

			#navbar {
				display: none;
			}

			#titleBar {
				display: flex;
				justify-content: flex-end;
				align-items: center;
				position: sticky;
				top: 0;
				z-index: 10000;
				background-color: #8c1515;
				padding: 0.5em 1em;
			}

				#titleBar .toggle {
					color: #ffffff;
					font-size: 1.5em;
					text-decoration: none;
					outline: 0;
				}

			#navPanel {
				display: block;
				position: fixed;
				top: 0;
				right: 0;
				width: 250px;
				max-width: 80%;
				height: 100%;
				overflow-y: auto;
				z-index: 10001;
				background-color: #8c1515;
				transform: translateX(100%);
				transition: transform .3s ease;
			}

				#navPanel.visible {
					transform: translateX(0);
				}

				#navPanel .close {
					display: block;
					text-align: right;
					padding: 0.5em 1em;
					color: #ffffff;
					font-size: 1.5em;
					text-decoration: none;
					outline: 0;
				}

				#navPanel ul {
					margin: 0;
				}

				#navPanel li {
					border-top: solid 1px rgba(255, 255, 255, 0.2);
				}

					#navPanel li:first-child {
						border-top: 0;
					}

				#navPanel a {
					display: flex;
					align-items: center;
					gap: 0.5em;
					padding: 0.85em 1em;
					color: #ffffff;
					text-decoration: none;
					outline: 0;
					font-size: 1.1em;
					font-weight: 600;
				}

		/* Basic */

			body, input, textarea, select {
				line-height: 1.75em;
				font-size: 1em;
				letter-spacing: 0;
			}

			h1, h2, h3, h4, h5, h6 {
				font-size: 1.25em;
				margin: 0 0 0.4em 0;
			}

			h1 {
				font-size: 2.25em;
				line-height: 1.25em;
			}

			header {
				margin: 0 0 1em 0;
			}

				header > p {
					font-size: 1.25em;
				}

			footer {
				margin: 2.5em 0 0 0;
			}

				footer > p {
					font-size: 1.25em;
				}

			hr {
				margin: 1.5em 0 2em 0;
			}

		/* Section/Article */

			section, article {
				clear: both;
			}

		/* Button */

			input[type="button"],
			input[type="submit"],
			input[type="reset"],
			button,
			.button {
				text-align: center;
				font-size: 1.2em;
				width: 100%;
				padding: 1em 0 1em 0;
			}

		/* List */

			ul.social {
				padding: 0em 0em 0em 0em;
			}

				ul.social li {
					margin: 0.5em 0.5em 0.5em 0.5em;
				}

					ul.social li a {
						top: 0 !important;
					}


			ul.actions {
				margin: 0;
			}

				ul.actions li {
					display: block;
					margin: 10px 0 0 0;
				}

					ul.actions li:first-child {
						margin-top: 0;
					}

		/* Box */

			.box {
				padding: 30px 20px 30px 20px;
				margin: 0 0 20px 0 !important;
			}

				.box h3 {
					margin-bottom: 0.25em;
				}

				.box .image.centered {
					margin-bottom: 1em;
				}

		/* Wrappers */

			.wrapper {
				padding: 3em 15px 3em 15px;
				text-align: center;
			}

				.wrapper.first {
					padding-top: 5em;
				}

		/* Articles */

			#top .image {
				width: 70%;
				height: auto;
				margin: 0 auto 1.75em auto;
			}

			#contact footer {
				margin: 0;
			}

		/* Copyright */

			.copyright {
				font-size: 1em;
				margin-top: 1em;
			}

				.copyright li {
					display: block;
				}

	}


/* Containers */

	.container {
		margin-left: auto;
		margin-right: auto;
	}

	.container.\31 25\25 {
		width: 100%;
		max-width: 1200px;
		min-width: 960px;
	}

	.container.\37 5\25 {
		width: 720px;
	}

	.container.\35 0\25 {
		width: 480px;
	}

	.container.\32 5\25 {
		width: 240px;
	}

	.container {
		width: 960px;
	}

	@media screen and (min-width: 737px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 1500px;
			min-width: 1200px;
		}

		.container.\37 5\25 {
			width: 900px;
		}

		.container.\35 0\25 {
			width: 600px;
		}

		.container.\32 5\25 {
			width: 300px;
		}

		.container {
			width: 1200px;
		}

	}

	@media screen and (min-width: 737px) and (max-width: 1200px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 1200px;
			min-width: 960px;
		}

		.container.\37 5\25 {
			width: 720px;
		}

		.container.\35 0\25 {
			width: 480px;
		}

		.container.\32 5\25 {
			width: 240px;
		}

		.container {
			width: 960px;
		}

	}

	@media screen and (max-width: 736px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 125%;
			min-width: 100%;
		}

		.container.\37 5\25 {
			width: 75%;
		}

		.container.\35 0\25 {
			width: 50%;
		}

		.container.\32 5\25 {
			width: 25%;
		}

		.container {
			width: 100% !important;
		}

	}


/* Grid */

	.row {
		border-bottom: solid 1px transparent;
		-moz-box-sizing: border-box;
		-webkit-box-sizing: border-box;
		box-sizing: border-box;
	}

	.row > * {
		float: left;
		-moz-box-sizing: border-box;
		-webkit-box-sizing: border-box;
		box-sizing: border-box;
	}

	.row:after, .row:before {
		content: '';
		display: block;
		clear: both;
		height: 0;
	}

	.row.uniform > * > :first-child {
		margin-top: 0;
	}

	.row.uniform > * > :last-child {
		margin-bottom: 0;
	}

	.row.\30 \25 > * {
		padding: 0 0 0 0px;
	}

	.row.\30 \25 {
		margin: 0 0 -1px 0px;
	}

	.row.uniform.\30 \25 > * {
		padding: 0px 0 0 0px;
	}

	.row.uniform.\30 \25 {
		margin: 0px 0 -1px 0px;
	}

	.row > * {
		padding: 0 0 0 40px;
	}

	.row {
		margin: 0 0 -1px -40px;
	}

	.row.uniform > * {
		padding: 40px 0 0 40px;
	}

	.row.uniform {
		margin: -40px 0 -1px -40px;
	}

	.row.\32 00\25 > * {
		padding: 0 0 0 80px;
	}

	.row.\32 00\25 {
		margin: 0 0 -1px -80px;
	}

	.row.uniform.\32 00\25 > * {
		padding: 80px 0 0 80px;
	}

	.row.uniform.\32 00\25 {
		margin: -80px 0 -1px -80px;
	}
/* ... */

